Cambio de funciones terminado

--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
                         <div class="d-flex justify-content-start">
                         <div class="container-fluid" class="align-center" style="width: 70%;" >
                             <br>
-                        <button type="button" class="btn btn-verde btn-lg"  onclick="alerta_auto()"><h5>Actividad Numero 1</h5></button>
+                        <button type="button" class="btn btn-verde btn-lg"  onclick="alerta_1()"><h5>Actividad Numero 1</h5></button>
                         <br />
-                        <button type="button" class="btn btn-azul btn-lg" onclick="alerta_empa()"><h5>Actividad Numero 2</h5></button>
+                        <button type="button" class="btn btn-azul btn-lg" onclick="alerta_2()"><h5>Actividad Numero 2</h5></button>
                         <br />
-                        <button type="button" class="btn btn-morado btn-lg" onclick="alerta_coma()"><h5>Actividad Numero 3</h5></button>
-                        <button type="button" class="btn btn-mora" onclick="alerta_relai()"><h5>Actividad Numero 4</h5></button>
-                        <button type="button" class="btn btn-green btn-lg" onclick="alerta_tode()"><h5>Actividad Numero 5</h5></button>
-                        <button type="button" class="btn btn-gr btn-lg" onclick="alerta_mpc()"><h5>Actividad Numero 6</h5></button>
-                        <button type="button" class="btn btn-rose btn-lg" onclick="alerta_penc()"><h5>Actividad Numero 7</h5></button>
-                        <button type="button" class="btn btn-navy btn-lg" onclick="alerta_pencri()"><h5>Actividad Numero 8</h5></button>
-                        <button type="button" class="btn btn-red btn-lg" onclick="alerta_mes()"><h5>Actividad Numero 9</h5></button>
-                        <button type="button" class="btn btn-ora btn-lg" onclick="alerta_Mte()"><h5>Actividad Numero 10</h5></button>
+                        <button type="button" class="btn btn-morado btn-lg" onclick="alerta_3()"><h5>Actividad Numero 3</h5></button>
+                        <button type="button" class="btn btn-mora" onclick="alerta_4()"><h5>Actividad Numero 4</h5></button>
+                        <button type="button" class="btn btn-green btn-lg" onclick="alerta_5()"><h5>Actividad Numero 5</h5></button>
+                        <button type="button" class="btn btn-gr btn-lg" onclick="alerta_6()"><h5>Actividad Numero 6</h5></button>
+                        <button type="button" class="btn btn-rose btn-lg" onclick="alerta_7()"><h5>Actividad Numero 7</h5></button>
+                        <button type="button" class="btn btn-navy btn-lg" onclick="alerta_8()"><h5>Actividad Numero 8</h5></button>
+                        <button type="button" class="btn btn-red btn-lg" onclick="alerta_9()"><h5>Actividad Numero 9</h5></button>
+                        <button type="button" class="btn btn-ora btn-lg" onclick="alerta_10()"><h5>Actividad Numero 10</h5></button>
                         </div>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
       <canvas>
           <!--Alertas-->
              <script>
-                 function alerta_auto(){
+                 function alerta_1(){
                      swal({
                          title: '<i><font color="#84C430"><h2><strong>Actividad 1</strong></h2></font></i> ',
                          imageUrl: 'src/img/atensa.png',
@@ -100,7 +100,7 @@
                          confirmButtonAriaLabel: 'Thumbs up, great!',
                          })
                  }
-                 function alerta_empa(){
+                 function alerta_2(){
                       swal({
                     title: '<i><font color="#009FE0"><h2><strong>Actividad 2</font></strong></h2></i> ',
                             imageUrl: 'src/img/atensa.png',
@@ -118,7 +118,7 @@
                             '<i class="fa fa-thumbs-up"></i> ¡Genial!',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
-                 function alerta_coma(){
+                 function alerta_3(){
                     swal({
                     title: '<i><font color="#9D2098"><h2><strong>Actividad 3</strong></h2></font></i> ',
                             imageUrl: 'src/img/atensa.png',
@@ -141,7 +141,7 @@
                             '<i class="fa fa-thumbs-up"></i> ¡Genial!',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
-                 function alerta_relai(){
+                 function alerta_4(){
                      swal({
                     title: '<i><font color="#5146AF"><h2><strong>Actividad 4</strong></h2></font></i> ',
                             imageUrl: 'src/img/atensa.png',
@@ -162,7 +162,7 @@
                             '<i class="fa fa-thumbs-up"></i> ¡Genial!',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
-                 function alerta_tode(){
+                 function alerta_5(){
                      swal({
                     title: '<i><font color="#00A585"><h2><strong>Actividad 5</strong></h2></font></i> ',
                             imageUrl: 'src/img/atensa.png',
@@ -180,7 +180,7 @@
                             '<i class="fa fa-thumbs-up"></i> ¡Genial!',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
-                 function alerta_mpc(){
+                 function alerta_6(){
                      swal({
                     title: '<i><font color="#465A65"><h2><strong>Actividad 6</strong></h2></font></i> ',
                             imageUrl: 'src/img/atensa.png',
@@ -198,7 +198,7 @@
                             '<i class="fa fa-thumbs-up"></i> Hecho',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
-                 function alerta_penc(){
+                 function alerta_7(){
                     swal({
                     title: '<i><font color="#ED3BCD"><h2><strong>Actividad 7</strong></h2></font></i> ',
                             imageUrl: 'src/img/atensa.png',
@@ -215,7 +215,7 @@
                             '<i class="fa fa-thumbs-up"></i> Hecho :)',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
-                 function alerta_pencri(){
+                 function alerta_8(){
                      swal({
                     title: '<i><font color="#186FB4"><h2><strong>Actividad 8</strong></h2></font></i> ',
                             imageUrl: 'src/img/atensa.png',
@@ -237,7 +237,7 @@
                             '<i class="fa fa-thumbs-up"></i> Done :)',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
-                 function alerta_mes(){
+                 function alerta_9(){
                      swal({
                     title: '<i><font color="#EE3A45"><h2><strong>Actividad 9</font></strong></h2></i> ',
                             imageUrl: 'src/img/atensa.png',
@@ -254,7 +254,7 @@
                             '<i class="fa fa-thumbs-up"></i> Hecho :)',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
-                 function alerta_Mte(){
+                 function alerta_10(){
                      swal({
                     title: '<i><font color="#FF6528"><h2><strong>Actividad 10</strong></h2></i></font>',
                             imageUrl: 'src/img/atensa.png',
@@ -302,34 +302,34 @@
           var MensajeSeleccionado= winningSegment.number;
           switch (MensajeSeleccionado){
               case "1":
-                  alerta_auto();
+                  alerta_1();
                   break;
               case "2":
-                  alerta_empa();
+                  alerta_2();
                   break;
               case "3":
-                  alerta_coma();
+                  alerta_3();
                   break;
               case "4":
-                  alerta_relai();
+                  alerta_4();
                   break;
               case "5":
-                  alerta_tode();
+                  alerta_5();
                   break;
               case "6":
-                  alerta_mpc();
+                  alerta_6();
                   break;
               case "7":
-                  alerta_penc();
+                  alerta_7();
                   break;
               case "8":
-                  alerta_pencri();
+                  alerta_8();
                   break;
               case "9":
-                  alerta_mes();
+                  alerta_9();
                   break;
               case "10":
-                  alerta_Mte();
+                  alerta_10();
                   break;
           }
            //Reinicio de Ruleta
