--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
                           width: '100%',
                           padding: 60,
                          html:
-                         //' <h3><small><p align="justify"><br />Es un proceso reflexivo en el cual una persona adquiere noción de su yo, de lo que lo caracteriza, de sus cualidades y defectos, de sus limitaciones, necesidades, aficiones y temores,<br /> ' + 
                          '<br /><b></b> <h3> Describa el último accidente que presencio y mencione las omisiones de seguridad que se dieron para ocasionarlo.<h3/><br /><br />Tiempo estimado: 5 min<p></small></h3>'+
                             '<img src = src/img/lesion.jpeg heigth = "200" width = "200"/>',                                                                
                          showCloseButton: true,
@@ -141,11 +140,10 @@
                             imageUrl: 'src/img/atensa.png',
                             imageWidth: 200,
                             imageHeight: 200,
-                            //imageAlt: 'Custom image',
                             width: '100%',
                             padding: 60,
                             html:
-                            ' <h3><p align="center"><br />Explica la importancia de las siguientes reglas de seguridad.</h3><br /> ' +
+                            ' <h3><p align="center"><br />Explica la importancia de las siguientes reglas de seguridad:</h3><br /> ' +
                                 '<img src = src/img/prohibido/noCelular.png heigth = "100" width = "100" />' +
                                 '<img src = src/img/prohibido/noFumar.png heigth = "100" width = "100" />' +
                                 '<img src = src/img/prohibido/noTocar.jpg heigth = "100" width = "100" />' +
@@ -206,8 +204,8 @@
                             width: '100%',
                             padding: 60,
                             html:
-                            ' <h3><p align="center"><br />Elija 2 compañeros al azar y pregúntele:<br /> ' + 
-                            '<br /><b>¿Cuales son los riesgos de seguridad de la actividad que realizaran el día de hoy?</b></b><p></h3>'+
+                            ' <h3><small><p align="center"><br />Elija 2 compañeros al azar y pregúntele:<br /> ' + 
+                            '<br /><b>¿Cuales son los riesgos de seguridad de la actividad que realizaran el día de hoy?</b></b><p> <small/></h3>'+
                             '<img src= src/img/cascoSeguridad.jpeg heigth = "200" width = "200"/>',
                             showCloseButton: true,
                             focusConfirm: false,
@@ -234,7 +232,7 @@
                             })}
                  function alerta_8(){
                      swal({
-                    title: '<i><font color="#186FB4"><h2><strong>Actividad 8</strong></h2></font></i> ',
+                    title: '<i><font color="#27E8BF"><h2><strong>Actividad 8</strong></h2></font></i> ',
                             imageUrl: 'src/img/atensa.png',
                             imageWidth: 200,
                             imageHeight: 200,
@@ -370,9 +368,8 @@
                             width: '100%',
                             padding: 60,
                             html:
-                            ' <h3><small><p align="center"><br/>Describa el último accidente que presencio y mencione las omisiones de seguridad que se le dieron para ocasionarlo.<br /> ' +
-                            '<div><img src = src/img/pisoM.jpeg align = "center" heigth = "200" width = "200"/>'+
-                            '<img src = src/img/lesion2.png align = "center" heigth = "200" width = "250"/> <div/>',
+                            ' <h3><small><p align="center"><br/>Ejemplifique con un compañero la maniobra de Heimlich<br /> ' +
+                            '<div><img src = src/img/maniobraH.jpeg align = "center" heigth = "300" width = "300"/><div/>',
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
@@ -388,9 +385,9 @@
                             width: '100%',
                             padding: 60,
                             html:
-                            ' <h3><small><p align="justify"><br />Explique la técnica de RCP<br /> ' +
-                            '<h3> <small><p>De un ejemplo de cada uno.<p/>'+
-                            '<div><img src = src/img/pisoM.jpeg align = "center" heigth = "200" width = "200"/> <div/>',
+                            ' <h3><small><p align="center"><br />Explique la técnica de RCP<br /> ' +                    
+                            '<div><img src = src/img/procesoRCP.png align = "center" heigth = "350" width = "500"/> <div/>'+
+                            '<h3> <small><p>Revise, llame y atienda.<p/>',
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
@@ -406,13 +403,13 @@
                             width: '100%',
                             padding: 60,
                             html:
-                            ' <h3><small><p align="justify"><br />Explique al equipo la diferencia entre incidente y accidente.<br /> ' +
-                            '<h3> <small><p>De un ejemplo de cada uno.<p/>'+
-                            '<div><img src = src/img/pisoM.jpeg align = "center" heigth = "200" width = "200"/> <div/>',
+                            ' <h3><small><p align="center"><br />Ejemplifica el proceso de carga manual de una caja desde el piso y explica la importancia de la postura.<br /> ' +
+                            '<div><img src = src/img/cargaManual.png align = "center" heigth = "200" width = "200"/>'+
+                            '&nbsp;&nbsp; <img src = src/img/cargaManual2.jpeg align = "center" heigth = "200" width = "200"/> <div/>',
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)!',                            
+                            '<i class="fa fa-thumbs-up"></i> Hecho :)',                            
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_18(){
@@ -424,13 +421,12 @@
                             width: '100%',
                             padding: 60,
                             html:
-                            ' <h3><small><p align="justify"><br />Explique al equipo la diferencia entre incidente y accidente.<br /> ' +
-                            '<h3> <small><p>De un ejemplo de cada uno.<p/>'+
-                            '<div><img src = src/img/pisoM.jpeg align = "center" heigth = "200" width = "200"/> <div/>',
+                            ' <h3><small><p align="justify"><br />Busque el extintor mas cercano a usted y tráigalo, después de una charla sobre las partes de un extintor y la forma en la que se debe de usar.<br /> ' +
+                            '<div><img src = src/img/extintor.jpeg align = "center" heigth = "200" width = "200"/> <div/>',
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)!',                            
+                            '<i class="fa fa-thumbs-up"></i> Hecho :)',                            
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_19(){
@@ -442,9 +438,8 @@
                             width: '100%',
                             padding: 60,
                             html:
-                            ' <h3><small><p align="justify"><br />Explique al equipo la diferencia entre incidente y accidente.<br /> ' +
-                            '<h3> <small><p>De un ejemplo de cada uno.<p/>'+
-                            '<div><img src = src/img/pisoM.jpeg align = "center" heigth = "200" width = "200"/> <div/>',
+                            ' <h3><small><p align="center"><br />Realiza una practica de rescate utilizando la técnica de levantamiento a cuatro manos.<br /> ' +
+                            '<div><img src = src/img/tecnicaLeva.jpeg align = "center" heigth = "300" width = "300"/>',
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
@@ -460,9 +455,9 @@
                             width: '100%',
                             padding: 60,
                             html:
-                            ' <h3><small><p align="justify"><br />Explique al equipo la diferencia entre incidente y accidente.<br /> ' +
-                            '<h3> <small><p>De un ejemplo de cada uno.<p/>'+
-                            '<div><img src = src/img/pisoM.jpeg align = "center" heigth = "200" width = "200"/> <div/>',
+                            ' <h3><small><p align="center"><br />Pide una venda del botiquín de primeros auxilios y realiza un vendaje circular.<br /> ' +
+                            '<h3> <small><p>“El vendaje circular  sirve para comprimir, proteger y sujetar”<p/>'+
+                            '<div><img src = src/img/vendaje.jpeg align = "center" heigth = "350" width = "300"/> <div/>',
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
@@ -538,36 +533,6 @@
               case "10":
                   alerta_10();
                   break;
-              case "1":
-                  alerta_1();
-                  break;
-              case "2":
-                  alerta_2();
-                  break;
-              case "3":
-                  alerta_3();
-                  break;
-              case "4":
-                  alerta_4();
-                  break;
-              case "5":
-                  alerta_5();
-                  break;
-              case "6":
-                  alerta_6();
-                  break;
-              case "7":
-                  alerta_7();
-                  break;
-              case "8":
-                  alerta_8();
-                  break;
-              case "9":
-                  alerta_9();
-                  break;
-              case "10":
-                  alerta_10();
-                  break;
               case "11":
                   alerta_11();
                   break;
@@ -578,25 +543,25 @@
                   alerta_13();
                   break;
               case "14":
-                  alerta_14();                                   ;
+                  alerta_14();                                   
                   break;
               case "15":
                   alerta_15();
                   break;
               case "16":
-                  alerta_16();                                   ;
+                  alerta_16();                                   
                   break;
               case "17":
                   alerta_17();
                   break;
               case "18":
-                  alerta_18();                                   ;
+                  alerta_18();                                   
                   break;
               case "19":
                   alerta_19();
                   break;
-              case "10":
-                  alerta_20();                                   ;
+              case "20":
+                  alerta_20();                                   
                   break;
 
           }
