Mensaje del boton

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                          showCloseButton: true,
                          focusConfirm: false,
                          confirmButtonText:
-                         '<i class="fa fa-thumbs-up"></i> ¡Genial!',
+                         '<i class="fa fa-thumbs-up"> Hecho :)</i> ',
                          confirmButtonAriaLabel: 'Thumbs up, great!',
                          })
                  }
@@ -131,7 +131,7 @@
                                 showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> ¡Genial!',
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i>',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_3(){
@@ -153,7 +153,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> ¡Genial!',
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i>',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_4(){
@@ -174,7 +174,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> ¡Genial!',
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i>',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_5(){
@@ -192,7 +192,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> ¡Genial!',
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i>',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_6(){
@@ -210,7 +210,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho',
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i> ',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_7(){
@@ -227,7 +227,7 @@
                              showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)',
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i> ',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_8(){
@@ -249,7 +249,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Done :)',
+                            '<i class="fa fa-thumbs-up">Hecho :)</i> ',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_9(){
@@ -266,7 +266,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)',
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i> ',
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_10(){
@@ -284,7 +284,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)!',                            
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i>',                            
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_11(){
@@ -302,7 +302,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)',                            
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i> ',                            
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_12(){
@@ -319,7 +319,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)!',                            
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i> ',                            
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_13(){
@@ -338,7 +338,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)!',                            
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i> ',                            
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_14(){
@@ -356,7 +356,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)',                            
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i>',                            
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_15(){
@@ -373,7 +373,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)!',                            
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i> ',                            
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_16(){
@@ -391,7 +391,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)!',                            
+                            '<i class="fa fa-thumbs-up"> Hecho :) </i>',                            
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_17(){
@@ -409,7 +409,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)',                            
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i>',                            
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_18(){
@@ -426,7 +426,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)',                            
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i> ',                            
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_19(){
@@ -443,7 +443,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)!',                            
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i> ',                            
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  function alerta_20(){
@@ -461,7 +461,7 @@
                             showCloseButton: true,
                             focusConfirm: false,
                             confirmButtonText:
-                            '<i class="fa fa-thumbs-up"></i> Hecho :)!',                            
+                            '<i class="fa fa-thumbs-up"> Hecho :)</i>',                            
                             confirmButtonAriaLabel: 'Thumbs up, great!',
                             })}
                  <!--Ruletasegmentos-->
